--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://kit.fontawesome.com/fa265fc13a.js" crossorigin="anonymous"></script>
     
     <title>React App</title>
   </head>
