--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -14,7 +14,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/fa265fc13a.js" crossorigin="anonymous"></script>
     
-    <title>React App</title>
+    <title>WATCH WIZARD</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
